# workshop-streamlit-aovivo

./: .env-example  .gitignore  pyproject.toml
data/: fake_orders.csv
src/: confluent_code.py  consumer.py  dashboard.py  producer.py
